--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Pagina HTML, contem as divs necessarias e chama o javascript e css -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,7 +13,7 @@
 
 		<div id="header">
 			<h1>OrgArQuiz</h1>
-			<h3>O quiz de organização e arquitetura de computadores original</h3>
+			<h3>O quiz de organização e arquitetura de computadores :)</h3>
 		</div>
 
 		<div id="iniciar" style="visibility: visible;">
